--- a/algorithm.ipynb
+++ b/algorithm.ipynb
@@ -3,168 +3,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b8724e58",
+   "id": "d7d2c81b",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
-    "import pandas as pd"
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "b3b3146c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<966x342 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 2390 stored elements in Compressed Sparse Row format>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gift_matrix = pickle.load(open('matrix/gift_matrix.pkl', 'rb'))\n",
-    "gift_matrix"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "4ab08711",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gift_pivot = pickle.load(open('matrix/gift_pivot.pkl', 'rb'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "51835395",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(949, 342)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gift_pivot = pd.DataFrame(gift_pivot)\n",
-    "gift_pivot.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "ab688fe1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.neighbors import NearestNeighbors\n",
-    "model = NearestNeighbors(algorithm='brute')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "edbb1900",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "NearestNeighbors(algorithm='brute')"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.fit(gift_matrix)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "e385b62e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "distance, suggestions = model.kneighbors(gift_pivot.iloc[0, :].values.reshape(1,-1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "8836cb3d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.        , 0.        , 4.4346    , 5.63055281, 5.74325692]])"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "distance"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "b1e1ec93",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[  0, 789, 328,  28,  11]])"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "suggestions"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7fbbe4c2",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d7d2c81b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
