--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -2318,8 +2318,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 938 ms, sys: 76.6 ms, total: 1.01 s\n",
-      "Wall time: 830 ms\n"
+      "CPU times: user 796 ms, sys: 57.4 ms, total: 854 ms\n",
+      "Wall time: 815 ms\n"
      ]
     }
    ],
@@ -3032,6 +3032,166 @@
   {
    "cell_type": "code",
    "execution_count": 59,
+   "id": "0d57da6a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'LiquorAccessory': 0,\n",
+       " 'accessory': 1,\n",
+       " 'coffee': 2,\n",
+       " 'sweet': 3,\n",
+       " 'wine': 4,\n",
+       " 'ground': 5,\n",
+       " 'healthy treat': 6,\n",
+       " 'hard liquor': 7,\n",
+       " 'artisanal': 8,\n",
+       " 'savoury': 9,\n",
+       " 'smart product': 10,\n",
+       " 'tea': 11,\n",
+       " 'photography': 12,\n",
+       " 'gadget': 13,\n",
+       " 'Savoury': 14,\n",
+       " 'health and fitness': 15,\n",
+       " 'decaf': 16,\n",
+       " 'Smart Product': 17,\n",
+       " 'music': 18,\n",
+       " 'outdoor': 19,\n",
+       " 'Sweet': 20,\n",
+       " 'Health and fitness': 21,\n",
+       " 'Accessory': 22,\n",
+       " 'Hard Liquor': 23,\n",
+       " 'gluten free': 24,\n",
+       " 'vegan': 25,\n",
+       " 'non gmo': 26,\n",
+       " 'kosher': 27,\n",
+       " 'homeware': 28,\n",
+       " 'Tea': 29,\n",
+       " 'Instant': 30,\n",
+       " 'tea bags': 31,\n",
+       " 'instant': 32,\n",
+       " 'kids': 33,\n",
+       " 'snacks': 34,\n",
+       " 'poleo': 35,\n",
+       " 'Photography': 36,\n",
+       " 'healthy': 37,\n",
+       " 'keto': 38}"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Enumerate categories\n",
+    "categories = list(df_legacy_final['Category'].value_counts().index)\n",
+    "\n",
+    "categories_dic = {}\n",
+    "for i in range(len(categories)):\n",
+    "    categories_dic[categories[i]] = i\n",
+    "    \n",
+    "categories_dic"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "id": "7419935b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Preferences</th>\n",
+       "      <th>Category</th>\n",
+       "      <th>Category_num</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>I’m more of a tea person 🍵$$$I prefer herbal/d...</td>\n",
+       "      <td>decaf</td>\n",
+       "      <td>16</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>I’m more of a tea person 🍵$$$I prefer herbal/d...</td>\n",
+       "      <td>sweet</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>I don’t drink coffee or tea 🤭$$$ Chocolates, C...</td>\n",
+       "      <td>hard liquor</td>\n",
+       "      <td>7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>I don’t drink coffee or tea 🤭$$$ Chocolates, C...</td>\n",
+       "      <td>accessory</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>I don’t drink coffee or tea 🤭$$$ Chocolates, C...</td>\n",
+       "      <td>LiquorAccessory</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                         Preferences         Category  \\\n",
+       "0  I’m more of a tea person 🍵$$$I prefer herbal/d...            decaf   \n",
+       "1  I’m more of a tea person 🍵$$$I prefer herbal/d...            sweet   \n",
+       "2  I don’t drink coffee or tea 🤭$$$ Chocolates, C...      hard liquor   \n",
+       "3  I don’t drink coffee or tea 🤭$$$ Chocolates, C...        accessory   \n",
+       "4  I don’t drink coffee or tea 🤭$$$ Chocolates, C...  LiquorAccessory   \n",
+       "\n",
+       "   Category_num  \n",
+       "0            16  \n",
+       "1             3  \n",
+       "2             7  \n",
+       "3             1  \n",
+       "4             0  "
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create a new column, map categories to numerical values\n",
+    "df_legacy_final['Category_num'] = df_legacy_final['Category'].apply(lambda x: categories_dic[x])\n",
+    "df_legacy_final.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "id": "a0702821",
    "metadata": {},
    "outputs": [],
@@ -3050,7 +3210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 62,
    "id": "44d9c132",
    "metadata": {},
    "outputs": [
@@ -3058,8 +3218,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 9.27 s, sys: 1.7 s, total: 11 s\n",
-      "Wall time: 11 s\n"
+      "CPU times: user 9.11 s, sys: 1.66 s, total: 10.8 s\n",
+      "Wall time: 10.7 s\n"
      ]
     }
    ],
@@ -3071,7 +3231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 63,
    "id": "5bd891f6",
    "metadata": {},
    "outputs": [
@@ -3098,6 +3258,7 @@
        "      <th></th>\n",
        "      <th>Preferences</th>\n",
        "      <th>Category</th>\n",
+       "      <th>Category_num</th>\n",
        "      <th>Preference_Clean</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -3106,30 +3267,35 @@
        "      <th>0</th>\n",
        "      <td>I’m more of a tea person 🍵$$$I prefer herbal/d...</td>\n",
        "      <td>decaf</td>\n",
+       "      <td>16</td>\n",
        "      <td>tea person prefer herbal de caffeinated tea ch...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>I’m more of a tea person 🍵$$$I prefer herbal/d...</td>\n",
        "      <td>sweet</td>\n",
+       "      <td>3</td>\n",
        "      <td>tea person prefer herbal de caffeinated tea ch...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>I don’t drink coffee or tea 🤭$$$ Chocolates, C...</td>\n",
        "      <td>hard liquor</td>\n",
+       "      <td>7</td>\n",
        "      <td>drink coffee tea chocolate candy baked treat s...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>I don’t drink coffee or tea 🤭$$$ Chocolates, C...</td>\n",
        "      <td>accessory</td>\n",
+       "      <td>1</td>\n",
        "      <td>drink coffee tea chocolate candy baked treat s...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>I don’t drink coffee or tea 🤭$$$ Chocolates, C...</td>\n",
        "      <td>LiquorAccessory</td>\n",
+       "      <td>0</td>\n",
        "      <td>drink coffee tea chocolate candy baked treat s...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -3144,15 +3310,15 @@
        "3  I don’t drink coffee or tea 🤭$$$ Chocolates, C...        accessory   \n",
        "4  I don’t drink coffee or tea 🤭$$$ Chocolates, C...  LiquorAccessory   \n",
        "\n",
-       "                                    Preference_Clean  \n",
-       "0  tea person prefer herbal de caffeinated tea ch...  \n",
-       "1  tea person prefer herbal de caffeinated tea ch...  \n",
-       "2  drink coffee tea chocolate candy baked treat s...  \n",
-       "3  drink coffee tea chocolate candy baked treat s...  \n",
-       "4  drink coffee tea chocolate candy baked treat s...  "
+       "   Category_num                                   Preference_Clean  \n",
+       "0            16  tea person prefer herbal de caffeinated tea ch...  \n",
+       "1             3  tea person prefer herbal de caffeinated tea ch...  \n",
+       "2             7  drink coffee tea chocolate candy baked treat s...  \n",
+       "3             1  drink coffee tea chocolate candy baked treat s...  \n",
+       "4             0  drink coffee tea chocolate candy baked treat s...  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3163,7 +3329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 64,
    "id": "8f1f253a",
    "metadata": {},
    "outputs": [
@@ -3173,7 +3339,7 @@
        "'tea person prefer herbal de caffeinated tea chocolate candy baked treat allergy dietary restriction send hard liquor example whiskey bourbon rum tequila enjoy capturing picture amp video smart home gadget cool love health wellness amp body care pet dog send love outdoors send'"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3192,7 +3358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 65,
    "id": "05e427a7",
    "metadata": {},
    "outputs": [],
