applying machine learning models on preprocess data

--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -2318,8 +2318,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 796 ms, sys: 57.4 ms, total: 854 ms\n",
-      "Wall time: 815 ms\n"
+      "CPU times: user 883 ms, sys: 70.7 ms, total: 953 ms\n",
+      "Wall time: 761 ms\n"
      ]
     }
    ],
@@ -3032,7 +3032,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "0d57da6a",
+   "id": "3bb2e1fa",
    "metadata": {},
    "outputs": [
     {
@@ -3098,7 +3098,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "7419935b",
+   "id": "37e7a75b",
    "metadata": {},
    "outputs": [
     {
@@ -3124,7 +3124,7 @@
        "      <th></th>\n",
        "      <th>Preferences</th>\n",
        "      <th>Category</th>\n",
-       "      <th>Category_num</th>\n",
+       "      <th>Category_Num</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -3170,7 +3170,7 @@
        "3  I don’t drink coffee or tea 🤭$$$ Chocolates, C...        accessory   \n",
        "4  I don’t drink coffee or tea 🤭$$$ Chocolates, C...  LiquorAccessory   \n",
        "\n",
-       "   Category_num  \n",
+       "   Category_Num  \n",
        "0            16  \n",
        "1             3  \n",
        "2             7  \n",
@@ -3185,167 +3185,8 @@
    ],
    "source": [
     "# Create a new column, map categories to numerical values\n",
-    "df_legacy_final['Category_num'] = df_legacy_final['Category'].apply(lambda x: categories_dic[x])\n",
+    "df_legacy_final['Category_Num'] = df_legacy_final['Category'].apply(lambda x: categories_dic[x])\n",
     "df_legacy_final.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "id": "a0702821",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Function to clean the Preference column\n",
-    "def clean_pref(row):\n",
-    "    # convert into lower character\n",
-    "    row = row.lower()\n",
-    "    # split string into words\n",
-    "    words = tokenizer.tokenize(row)\n",
-    "    # remove stop words and apply lemmatization\n",
-    "    words = [lemmatizer.lemmatize(word.strip()) for word in words if word not in stopwords.words('english')]\n",
-    "    # convert word into string again and return\n",
-    "    return ' '.join(words)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "id": "44d9c132",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 9.11 s, sys: 1.66 s, total: 10.8 s\n",
-      "Wall time: 10.7 s\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%time\n",
-    "# Applying clean preference function to transform the text\n",
-    "df_legacy_final['Preference_Clean'] = df_legacy_final['Preferences'].apply(clean_pref)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "id": "5bd891f6",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Preferences</th>\n",
-       "      <th>Category</th>\n",
-       "      <th>Category_num</th>\n",
-       "      <th>Preference_Clean</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>I’m more of a tea person 🍵$$$I prefer herbal/d...</td>\n",
-       "      <td>decaf</td>\n",
-       "      <td>16</td>\n",
-       "      <td>tea person prefer herbal de caffeinated tea ch...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>I’m more of a tea person 🍵$$$I prefer herbal/d...</td>\n",
-       "      <td>sweet</td>\n",
-       "      <td>3</td>\n",
-       "      <td>tea person prefer herbal de caffeinated tea ch...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>I don’t drink coffee or tea 🤭$$$ Chocolates, C...</td>\n",
-       "      <td>hard liquor</td>\n",
-       "      <td>7</td>\n",
-       "      <td>drink coffee tea chocolate candy baked treat s...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>I don’t drink coffee or tea 🤭$$$ Chocolates, C...</td>\n",
-       "      <td>accessory</td>\n",
-       "      <td>1</td>\n",
-       "      <td>drink coffee tea chocolate candy baked treat s...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>I don’t drink coffee or tea 🤭$$$ Chocolates, C...</td>\n",
-       "      <td>LiquorAccessory</td>\n",
-       "      <td>0</td>\n",
-       "      <td>drink coffee tea chocolate candy baked treat s...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                         Preferences         Category  \\\n",
-       "0  I’m more of a tea person 🍵$$$I prefer herbal/d...            decaf   \n",
-       "1  I’m more of a tea person 🍵$$$I prefer herbal/d...            sweet   \n",
-       "2  I don’t drink coffee or tea 🤭$$$ Chocolates, C...      hard liquor   \n",
-       "3  I don’t drink coffee or tea 🤭$$$ Chocolates, C...        accessory   \n",
-       "4  I don’t drink coffee or tea 🤭$$$ Chocolates, C...  LiquorAccessory   \n",
-       "\n",
-       "   Category_num                                   Preference_Clean  \n",
-       "0            16  tea person prefer herbal de caffeinated tea ch...  \n",
-       "1             3  tea person prefer herbal de caffeinated tea ch...  \n",
-       "2             7  drink coffee tea chocolate candy baked treat s...  \n",
-       "3             1  drink coffee tea chocolate candy baked treat s...  \n",
-       "4             0  drink coffee tea chocolate candy baked treat s...  "
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_legacy_final.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "id": "8f1f253a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'tea person prefer herbal de caffeinated tea chocolate candy baked treat allergy dietary restriction send hard liquor example whiskey bourbon rum tequila enjoy capturing picture amp video smart home gadget cool love health wellness amp body care pet dog send love outdoors send'"
-      ]
-     },
-     "execution_count": 64,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df_legacy_final['Preference_Clean'][0]"
    ]
   },
   {
@@ -3358,7 +3199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 61,
    "id": "05e427a7",
    "metadata": {},
    "outputs": [],
