finding probability of closest categories

--- a/data_analysis.ipynb
+++ b/data_analysis.ipynb
@@ -1707,7 +1707,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "6f722e9d",
+   "id": "fe139808",
    "metadata": {},
    "outputs": [
     {
@@ -1778,7 +1778,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "ae7b4da7",
+   "id": "865fe024",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1789,7 +1789,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "6fc7b3b9",
+   "id": "e9e48d73",
    "metadata": {},
    "outputs": [
     {
@@ -2420,8 +2420,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 899 ms, sys: 65.5 ms, total: 964 ms\n",
-      "Wall time: 753 ms\n"
+      "CPU times: user 934 ms, sys: 74.8 ms, total: 1.01 s\n",
+      "Wall time: 858 ms\n"
      ]
     }
    ],
@@ -3132,166 +3132,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 62,
-   "id": "27351b4a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'coffee': 0,\n",
-       " 'LiquorAccessory': 1,\n",
-       " 'accessory': 2,\n",
-       " 'sweet': 3,\n",
-       " 'ground': 4,\n",
-       " 'wine': 5,\n",
-       " 'healthy treat': 6,\n",
-       " 'hard liquor': 7,\n",
-       " 'artisanal': 8,\n",
-       " 'smart product': 9,\n",
-       " 'savoury': 10,\n",
-       " 'tea': 11,\n",
-       " 'photography': 12,\n",
-       " 'gadget': 13,\n",
-       " 'Savoury': 14,\n",
-       " 'health and fitness': 15,\n",
-       " 'decaf': 16,\n",
-       " 'Smart Product': 17,\n",
-       " 'music': 18,\n",
-       " 'outdoor': 19,\n",
-       " 'Sweet': 20,\n",
-       " 'Hard Liquor': 21,\n",
-       " 'Health and fitness': 22,\n",
-       " 'Accessory': 23,\n",
-       " 'gluten free': 24,\n",
-       " 'vegan': 25,\n",
-       " 'non gmo': 26,\n",
-       " 'kosher': 27,\n",
-       " 'homeware': 28,\n",
-       " 'Instant': 29,\n",
-       " 'tea bags': 30,\n",
-       " 'instant': 31,\n",
-       " 'Tea': 32,\n",
-       " 'kids': 33,\n",
-       " 'snacks': 34,\n",
-       " 'poleo': 35,\n",
-       " 'Photography': 36,\n",
-       " 'healthy': 37,\n",
-       " 'keto': 38}"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Enumerate categories\n",
-    "categories = list(df_legacy_final['Category'].value_counts().index)\n",
-    "\n",
-    "categories_dic = {}\n",
-    "for i in range(len(categories)):\n",
-    "    categories_dic[categories[i]] = i\n",
-    "    \n",
-    "categories_dic"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 63,
-   "id": "e668b7db",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Preferences</th>\n",
-       "      <th>Category</th>\n",
-       "      <th>Category_Num</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>I’m more of a tea person 🍵$$$I prefer herbal/d...</td>\n",
-       "      <td>decaf</td>\n",
-       "      <td>16</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>I’m more of a tea person 🍵$$$I prefer herbal/d...</td>\n",
-       "      <td>sweet</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>I don’t drink coffee or tea 🤭$$$ Chocolates, C...</td>\n",
-       "      <td>hard liquor</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>I don’t drink coffee or tea 🤭$$$ Chocolates, C...</td>\n",
-       "      <td>accessory</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>I don’t drink coffee or tea 🤭$$$ Chocolates, C...</td>\n",
-       "      <td>LiquorAccessory</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                         Preferences         Category  \\\n",
-       "0  I’m more of a tea person 🍵$$$I prefer herbal/d...            decaf   \n",
-       "1  I’m more of a tea person 🍵$$$I prefer herbal/d...            sweet   \n",
-       "2  I don’t drink coffee or tea 🤭$$$ Chocolates, C...      hard liquor   \n",
-       "3  I don’t drink coffee or tea 🤭$$$ Chocolates, C...        accessory   \n",
-       "4  I don’t drink coffee or tea 🤭$$$ Chocolates, C...  LiquorAccessory   \n",
-       "\n",
-       "   Category_Num  \n",
-       "0            16  \n",
-       "1             3  \n",
-       "2             7  \n",
-       "3             2  \n",
-       "4             1  "
-      ]
-     },
-     "execution_count": 63,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Create a new column, map categories to numerical values\n",
-    "df_legacy_final['Category_Num'] = df_legacy_final['Category'].apply(lambda x: categories_dic[x])\n",
-    "df_legacy_final.head()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "560a1e52",
    "metadata": {},
@@ -3301,7 +3141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 62,
    "id": "05e427a7",
    "metadata": {},
    "outputs": [],
