--- a/algorithm.ipynb
+++ b/algorithm.ipynb
@@ -197,8 +197,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 8.4 s, sys: 1.42 s, total: 9.82 s\n",
-      "Wall time: 9.82 s\n"
+      "CPU times: user 8.34 s, sys: 1.44 s, total: 9.78 s\n",
+      "Wall time: 9.78 s\n"
      ]
     }
    ],
@@ -449,8 +449,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 45.3 s, sys: 1.56 s, total: 46.9 s\n",
-      "Wall time: 43.5 s\n"
+      "CPU times: user 46.1 s, sys: 1.54 s, total: 47.7 s\n",
+      "Wall time: 44.2 s\n"
      ]
     }
    ],
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 23,
    "id": "c6caad72",
    "metadata": {},
    "outputs": [],
@@ -922,11 +922,23 @@
     "    df_vec = tfidf_predict.transform(df['Preference_Clean']).toarray()\n",
     "    \n",
     "    # predict the category\n",
-    "    pred = lrc.predict(df_vec)[0]\n",
-    "    print(\"\\nPredicted tag:\", pred)\n",
+    "    # pred = lrc.predict(df_vec)[0]\n",
+    "    \n",
+    "    # predict probability\n",
+    "    pred_prob = lrc.predict_proba(df_vec)[0]\n",
+    "    \n",
+    "    # dictionary of category with its probability\n",
+    "    category_prob = {}\n",
+    "    for i in range(len(pred_prob)):\n",
+    "        category_prob[lrc.classes_[i]] = pred_prob[i]\n",
+    "    \n",
+    "    # sort the dictionary to get the max two\n",
+    "    category_prob_sort = dict(sorted(category_prob.items(), key=lambda item: item[1], reverse=True))\n",
+    "    pred_two = list(category_prob_sort.keys())[:2]\n",
+    "    print(\"\\nProbability tag:\", pred_two)\n",
     "    \n",
     "    # fecthing all the products which has category as product\n",
-    "    df_product = df_recommend[df_recommend['ProductTag'].apply(lambda x: pred in x)]\n",
+    "    df_product = df_recommend[df_recommend['ProductTag'].apply(lambda product_item: pred_two[0] in product_item)]\n",
     "    df_product = df_product[['ProductId', 'ProductName', 'Cost', 'Price']]\n",
     "    \n",
     "    print(\"\\n\", df_product['ProductName'])"
@@ -1121,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 26,
    "id": "87f3966d",
    "metadata": {},
    "outputs": [
@@ -1131,7 +1143,7 @@
      "text": [
       "Preference after clean: ['tea person specialty tea good savory non sweet snack allergy dietary restriction send like everything enjoy capturing picture amp video smart home gadget cool love send oh yeah l']\n",
       "\n",
-      "Predicted tag: tea\n",
+      "Probability tag: ['tea', 'LiquorAccessory']\n",
       "\n",
       " 35                Mini Signature Box (Five Pyramid Bags)\n",
       "62                           \"Home Sweet Home\" Tea Towel\n",
@@ -1158,7 +1170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99f4d64c",
+   "id": "6d8f0d14",
    "metadata": {},
    "outputs": [],
    "source": []
