--- a/algorithm.ipynb
+++ b/algorithm.ipynb
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 33,
    "id": "c6caad72",
    "metadata": {},
    "outputs": [],
@@ -922,7 +922,7 @@
     "    df_vec = tfidf_predict.transform(df['Preference_Clean']).toarray()\n",
     "    \n",
     "    # predict the category\n",
-    "    # pred = lrc.predict(df_vec)[0]\n",
+    "    pred = lrc.predict(df_vec)[0]\n",
     "    \n",
     "    # predict probability\n",
     "    pred_prob = lrc.predict_proba(df_vec)[0]\n",
@@ -935,13 +935,17 @@
     "    # sort the dictionary to get the max two\n",
     "    category_prob_sort = dict(sorted(category_prob.items(), key=lambda item: item[1], reverse=True))\n",
     "    pred_two = list(category_prob_sort.keys())[:2]\n",
-    "    print(\"\\nProbability tag:\", pred_two)\n",
     "    \n",
     "    # fecthing all the products which has category as product\n",
-    "    df_product = df_recommend[df_recommend['ProductTag'].apply(lambda product_item: pred_two[0] in product_item)]\n",
+    "    df_product = df_recommend[df_recommend['ProductTag'].apply(lambda product_item: pred in product_item)]\n",
     "    df_product = df_product[['ProductId', 'ProductName', 'Cost', 'Price']]\n",
     "    \n",
-    "    print(\"\\n\", df_product['ProductName'])"
+    "    product_name = df_product.iloc[0]['ProductName']\n",
+    "    print(\"\\n\", product_name)\n",
+    "    \n",
+    "    # recommend product similar to product name\n",
+    "    print(\"\\nRecommended products:\\n\")\n",
+    "    print(recommender(product_name))"
    ]
   },
   {
@@ -1133,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "id": "87f3966d",
    "metadata": {},
    "outputs": [
@@ -1143,23 +1147,11 @@
      "text": [
       "Preference after clean: ['tea person specialty tea good savory non sweet snack allergy dietary restriction send like everything enjoy capturing picture amp video smart home gadget cool love send oh yeah l']\n",
       "\n",
-      "Probability tag: ['tea', 'LiquorAccessory']\n",
+      " Mini Signature Box (Five Pyramid Bags)\n",
       "\n",
-      " 35                Mini Signature Box (Five Pyramid Bags)\n",
-      "62                           \"Home Sweet Home\" Tea Towel\n",
-      "73     Petite Presentation Box Warming Joy (Pyramid B...\n",
-      "88                         Classic Wooden Assortment Box\n",
-      "89                                Citrus Ginger Cylinder\n",
-      "110                                       Sparkling Rose\n",
-      "111                                        Birthday Cake\n",
-      "112                          Unicorn Tears (unsweetened)\n",
-      "194                     Insulated Bottle with Wooden Cap\n",
-      "235                         Relax Tea Pyramid Bags (TIN)\n",
-      "236                         Sleep Tea Pyramid Bags (TIN)\n",
-      "237                      Immunity Tea Pyramid Bags (TIN)\n",
-      "316                 Chamomile - Caffeine Free Teabag Tin\n",
-      "317    English Breakfast - 20 Teabags in Signature Te...\n",
-      "Name: ProductName, dtype: object\n"
+      "Recommended products:\n",
+      "\n",
+      "['Relax Tea Pyramid Bags (TIN)', 'Sleep Tea Pyramid Bags (TIN)', 'Immunity Tea Pyramid Bags (TIN)', 'Petite Presentation Box Warming Joy (Pyramid Bags)', 'Everyday English Breakfast Tea Pyramid Bags (TIN)']\n"
      ]
     }
    ],
@@ -1170,7 +1162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6d8f0d14",
+   "id": "19dfc824",
    "metadata": {},
    "outputs": [],
    "source": []
