need to add price factor more

--- a/algorithm.ipynb
+++ b/algorithm.ipynb
@@ -84,7 +84,6 @@
        "      <th></th>\n",
        "      <th>Preferences</th>\n",
        "      <th>Category</th>\n",
-       "      <th>Category_Num</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -92,50 +91,38 @@
        "      <th>0</th>\n",
        "      <td>I’m more of a tea person 🍵$$$I prefer herbal/d...</td>\n",
        "      <td>decaf</td>\n",
-       "      <td>16</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>I’m more of a tea person 🍵$$$I prefer herbal/d...</td>\n",
        "      <td>sweet</td>\n",
-       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>I don’t drink coffee or tea 🤭$$$ Chocolates, C...</td>\n",
        "      <td>hard liquor</td>\n",
-       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>I don’t drink coffee or tea 🤭$$$ Chocolates, C...</td>\n",
        "      <td>accessory</td>\n",
-       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>I don’t drink coffee or tea 🤭$$$ Chocolates, C...</td>\n",
        "      <td>LiquorAccessory</td>\n",
-       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                         Preferences         Category  \\\n",
-       "0  I’m more of a tea person 🍵$$$I prefer herbal/d...            decaf   \n",
-       "1  I’m more of a tea person 🍵$$$I prefer herbal/d...            sweet   \n",
-       "2  I don’t drink coffee or tea 🤭$$$ Chocolates, C...      hard liquor   \n",
-       "3  I don’t drink coffee or tea 🤭$$$ Chocolates, C...        accessory   \n",
-       "4  I don’t drink coffee or tea 🤭$$$ Chocolates, C...  LiquorAccessory   \n",
-       "\n",
-       "   Category_Num  \n",
-       "0            16  \n",
-       "1             3  \n",
-       "2             7  \n",
-       "3             2  \n",
-       "4             1  "
+       "                                         Preferences         Category\n",
+       "0  I’m more of a tea person 🍵$$$I prefer herbal/d...            decaf\n",
+       "1  I’m more of a tea person 🍵$$$I prefer herbal/d...            sweet\n",
+       "2  I don’t drink coffee or tea 🤭$$$ Chocolates, C...      hard liquor\n",
+       "3  I don’t drink coffee or tea 🤭$$$ Chocolates, C...        accessory\n",
+       "4  I don’t drink coffee or tea 🤭$$$ Chocolates, C...  LiquorAccessory"
       ]
      },
      "execution_count": 2,
@@ -197,8 +184,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 8.34 s, sys: 1.44 s, total: 9.78 s\n",
-      "Wall time: 9.78 s\n"
+      "CPU times: user 8.39 s, sys: 1.42 s, total: 9.81 s\n",
+      "Wall time: 9.82 s\n"
      ]
     }
    ],
@@ -237,7 +224,6 @@
        "      <th></th>\n",
        "      <th>Preferences</th>\n",
        "      <th>Category</th>\n",
-       "      <th>Category_Num</th>\n",
        "      <th>Preference_Clean</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -246,35 +232,30 @@
        "      <th>0</th>\n",
        "      <td>I’m more of a tea person 🍵$$$I prefer herbal/d...</td>\n",
        "      <td>decaf</td>\n",
-       "      <td>16</td>\n",
        "      <td>tea person prefer herbal de caffeinated tea ch...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>I’m more of a tea person 🍵$$$I prefer herbal/d...</td>\n",
        "      <td>sweet</td>\n",
-       "      <td>3</td>\n",
        "      <td>tea person prefer herbal de caffeinated tea ch...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>I don’t drink coffee or tea 🤭$$$ Chocolates, C...</td>\n",
        "      <td>hard liquor</td>\n",
-       "      <td>7</td>\n",
        "      <td>drink coffee tea chocolate candy baked treat s...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>I don’t drink coffee or tea 🤭$$$ Chocolates, C...</td>\n",
        "      <td>accessory</td>\n",
-       "      <td>2</td>\n",
        "      <td>drink coffee tea chocolate candy baked treat s...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>I don’t drink coffee or tea 🤭$$$ Chocolates, C...</td>\n",
        "      <td>LiquorAccessory</td>\n",
-       "      <td>1</td>\n",
        "      <td>drink coffee tea chocolate candy baked treat s...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -289,12 +270,12 @@
        "3  I don’t drink coffee or tea 🤭$$$ Chocolates, C...        accessory   \n",
        "4  I don’t drink coffee or tea 🤭$$$ Chocolates, C...  LiquorAccessory   \n",
        "\n",
-       "   Category_Num                                   Preference_Clean  \n",
-       "0            16  tea person prefer herbal de caffeinated tea ch...  \n",
-       "1             3  tea person prefer herbal de caffeinated tea ch...  \n",
-       "2             7  drink coffee tea chocolate candy baked treat s...  \n",
-       "3             2  drink coffee tea chocolate candy baked treat s...  \n",
-       "4             1  drink coffee tea chocolate candy baked treat s...  "
+       "                                    Preference_Clean  \n",
+       "0  tea person prefer herbal de caffeinated tea ch...  \n",
+       "1  tea person prefer herbal de caffeinated tea ch...  \n",
+       "2  drink coffee tea chocolate candy baked treat s...  \n",
+       "3  drink coffee tea chocolate candy baked treat s...  \n",
+       "4  drink coffee tea chocolate candy baked treat s...  "
       ]
      },
      "execution_count": 6,
@@ -449,8 +430,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 46.1 s, sys: 1.54 s, total: 47.7 s\n",
-      "Wall time: 44.2 s\n"
+      "CPU times: user 45.3 s, sys: 1.54 s, total: 46.8 s\n",
+      "Wall time: 43.6 s\n"
      ]
     }
    ],
@@ -905,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 23,
    "id": "c6caad72",
    "metadata": {},
    "outputs": [],
@@ -916,7 +897,6 @@
     "    \n",
     "    # cleaning the preference\n",
     "    df['Preference_Clean'] = df['Preference'].apply(clean_pref)\n",
-    "    print(\"Preference after clean:\", df['Preference_Clean'].values)\n",
     "    \n",
     "    # transform the preference into vectors\n",
     "    df_vec = tfidf_predict.transform(df['Preference_Clean']).toarray()\n",
@@ -941,7 +921,7 @@
     "    df_product = df_product[['ProductId', 'ProductName', 'Cost', 'Price']]\n",
     "    \n",
     "    product_name = df_product.iloc[0]['ProductName']\n",
-    "    print(\"\\n\", product_name)\n",
+    "    print(\"\\nProduct Name:\", product_name)\n",
     "    \n",
     "    # recommend product similar to product name\n",
     "    print(\"\\nRecommended products:\\n\")\n",
@@ -1137,7 +1117,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 26,
+   "id": "d1fcc8ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'I’m more of a tea person 🍵$$$Any specialty tea is good for me 🍵$$$ Savories and non-sweet snacks 🥓 🥕🥨 $$$  I do NOT have any allergies or dietary restrictions 👍 $$$ $$$Send 👍$$$I like everything 👍$$$ 📸 I enjoy capturing pictures &amp; videos $$$  📱🏡 Smart home gadgets are so cool. I love them. $$$ $$$Send 👍$$$Oh yeah! 🤘$$$L'"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_str = df_test_sample['Preferences'][8]\n",
+    "test_str"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "87f3966d",
    "metadata": {},
    "outputs": [
@@ -1145,9 +1147,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Preference after clean: ['tea person specialty tea good savory non sweet snack allergy dietary restriction send like everything enjoy capturing picture amp video smart home gadget cool love send oh yeah l']\n",
       "\n",
-      " Mini Signature Box (Five Pyramid Bags)\n",
+      "Product Name: Mini Signature Box (Five Pyramid Bags)\n",
       "\n",
       "Recommended products:\n",
       "\n",
@@ -1156,16 +1157,8 @@
     }
    ],
    "source": [
-    "pipeline(df_test_sample['Preferences'][8])"
+    "pipeline(test_str)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "19dfc824",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
