added some more markup before the pipeline

--- a/algorithm.ipynb
+++ b/algorithm.ipynb
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "323d7312",
+   "id": "1eacff25",
    "metadata": {},
    "source": [
     "# Clean the preference"
@@ -184,8 +184,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 7.87 s, sys: 1.33 s, total: 9.2 s\n",
-      "Wall time: 9.2 s\n"
+      "CPU times: user 7.83 s, sys: 1.33 s, total: 9.16 s\n",
+      "Wall time: 9.17 s\n"
      ]
     }
    ],
@@ -403,7 +403,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "8fed12cf",
+   "id": "27dc0e7f",
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +441,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "485ab666",
+   "id": "6668085c",
    "metadata": {},
    "source": [
     "### Increase the model performance:\n",
@@ -480,8 +480,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 29.4 s, sys: 1.63 s, total: 31.1 s\n",
-      "Wall time: 27.5 s\n"
+      "CPU times: user 29.3 s, sys: 1.62 s, total: 30.9 s\n",
+      "Wall time: 27.3 s\n"
      ]
     }
    ],
@@ -931,7 +931,11 @@
    "id": "4e7e6dcc",
    "metadata": {},
    "source": [
-    "# Pipeline that recommends products on the basis of preference"
+    "# Pipeline that recommends products on the basis of preference\n",
+    "* Logistic Regression and Support Vector Machine have the same accuracy\n",
+    "* So first predicting with the Logistic Regression\n",
+    "* And then try with the Support Vector Machine\n",
+    "* And getting better results with Support Vector Machine"
    ]
   },
   {
@@ -1173,7 +1177,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "c364cb28",
+   "id": "037499bd",
    "metadata": {},
    "outputs": [
     {
@@ -1204,7 +1208,7 @@
      "text": [
       "Predicted Tag: tea\n",
       "\n",
-      "Product tag sorted: {'tea': 0.4345222547339818, 'savoury': 0.14465244832048949, 'accessory': 0.08541780127888425, 'liquoraccessory': 0.08440344815587061, 'wine': 0.06099323957232824, 'photography': 0.05890583355054368, 'smart product': 0.04290792189142331, 'hard liquor': 0.02280073620171658, 'healthy treat': 0.021727592847630012, 'gadget': 0.016071469341727467, 'sweet': 0.011183916546929927, 'health and fitness': 0.010392146083540306, 'artisanal': 0.002938243909085043, 'coffee': 0.001774815538351165, 'ground': 0.0013081320274981245}\n",
+      "Product tag sorted: {'tea': 0.43376400169813006, 'savoury': 0.1449478888227005, 'accessory': 0.08592991970197104, 'liquoraccessory': 0.08438963032835207, 'wine': 0.061044283068757095, 'photography': 0.054036212615781766, 'smart product': 0.046437841809031474, 'hard liquor': 0.02249295799329469, 'healthy treat': 0.022160966529296985, 'gadget': 0.016834074649566412, 'sweet': 0.011333465240230796, 'health and fitness': 0.010609620458906057, 'artisanal': 0.0029940212490319976, 'coffee': 0.0017083139175493066, 'ground': 0.0013168019173990277}\n",
       "\n",
       "Product Name: Everyday English Breakfast Tea Pyramid Bags (TIN)\n",
       "\n",
